--- a/src/components/Map/subbanner.scss
+++ b/src/components/Map/subbanner.scss
@@ -9,25 +9,12 @@
     .group{
         display: flex;
         align-items: center;
-        .item{
-            /* background: #ffffff6b; */
-            border: none;
-            margin: 0px 5px;
-            padding: 5px 10px;
-            border-radius: 0px;
-            cursor: pointer;
-            -webkit-transition: 0.5s all;
-            transition: 0.2s all;
-        }
-        .item:hover{
-            background: #2280fb69;
-        }
     }
     .dropdown{
-        button{
-            border: 0px;
-            background: none;
-        }
+        // button{
+        //     border: 0px;
+        //     background: none;
+        // }
         .dropdown-content{
             background: white;
             position: absolute;
