--- a/src/components/Map/subbanner.scss
+++ b/src/components/Map/subbanner.scss
@@ -16,7 +16,7 @@
         //     background: none;
         // }
         .dropdown-content{
-            background: white;
+            // background: white;
             position: absolute;
             border: 1px solid #a0a0a0;
             .option{
@@ -24,7 +24,7 @@
             }
             .option:hover{
                 background: rgb(0, 119, 255);
-                color: white;
+                // color: white;
             }
         }
     }
