--- a/src/css/global.scss
+++ b/src/css/global.scss
@@ -8,6 +8,22 @@ $vpmc-btn-primary: #d8cfc4;
 $vpmc-color-primary: #2f375b;
 $vpmc-color-disabled: #95a7b5;
 
+.vpmc-helper-text{
+    height: 20px;
+    position: absolute;
+    bottom: -22px;
+    font-size: 12px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: inherit;
+    color: #00000073;
+    font-size: 10px;
+    &:hover{
+        overflow: unset;
+
+    }
+}
+
 .vpmc-btn{
     background-color: $vpmc-btn-primary !important;
     color: $vpmc-color-primary;
