update api modules

--- a/src/components/Map/AppraisalAnalysisSidebar/MarketComparison/ComparativeCaseFilter/Step.scss
+++ b/src/components/Map/AppraisalAnalysisSidebar/MarketComparison/ComparativeCaseFilter/Step.scss
@@ -1,40 +1,43 @@
-.vpmc-step-form-wraper{
-    display: flex;
-    flex-direction: column;
-    .vpmc-Step-title{}
-    .vpmc-step-content{
+.form-card{
+    flex: 1;
+    .vpmc-step-form-wraper{
         display: flex;
         flex-direction: column;
-        .col-item{
+        .vpmc-Step-title{}
+        .vpmc-step-content{
             display: flex;
             flex-direction: column;
-        }
-        .row-item{
-            display: flex;
-        }
-        .vpmc-step-item-group{
-            display: flex;
-            flex-direction: column;
-            margin: 10px 0px;
-            .item-group-title{
-
-            }
-            .item-group-content{
+            .col-item{
                 display: flex;
-                margin-left: 10px;
-                .text-item{
-                    // flex: 1;
-                    white-space: nowrap;
-                    margin-left: 3px;
+                flex-direction: column;
+            }
+            .row-item{
+                display: flex;
+            }
+            .vpmc-step-item-group{
+                display: flex;
+                flex-direction: column;
+                margin: 10px 0px;
+                .item-group-title{
+
                 }
-                .form-item{
-                    flex: 1;
-                    & > *{
-                        width: 100%;
+                .item-group-content{
+                    display: flex;
+                    margin-left: 10px;
+                    .text-item{
+                        // flex: 1;
+                        white-space: nowrap;
+                        margin-left: 3px;
+                    }
+                    .form-item{
+                        flex: 1;
+                        & > *{
+                            width: 100%;
+                        }
                     }
                 }
+                
             }
-            
         }
     }
 }
