--- a/src/components/Map/AppraisalAnalysisSidebar/MarketComparison/ComparativeCaseFilter/Step.scss
+++ b/src/components/Map/AppraisalAnalysisSidebar/MarketComparison/ComparativeCaseFilter/Step.scss
@@ -24,6 +24,7 @@
                 .item-group-content{
                     display: flex;
                     margin-left: 10px;
+                    margin-top: 2px;
                     .text-item{
                         // flex: 1;
                         white-space: nowrap;
